<resources>
    <string name="app_name">ShaiProperty</string>
    <string name="title_activity_home">ScrollingActivity</string>

    <string name="action_settings">Settings</string>

    <string name="search_for_properties">Search for properties</string>
    <string name="saved_properties">Saved Properties</string>
    <string name="you_must_be_logged_in_to_save_properties">You must be logged in to save properties</string>
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="news">News</string>
    <string name="description">Description</string>
    <string name="location_property_name">Location, Property Name</string>
    <string name="published_on">Published on:</string>
    <string name="contact">Contact</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="property_details">Property Details</string>
    <string name="land_title">Land Title</string>
    <string name="tenure">Tenure</string>
    <string name="furnishing">Furnishing</string>
    <string name="property_title_type">Property Title Type</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="iproperty_com_my">iProperty.com.my</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="built_up_size">Built-up Size:</string>
    <string name="furnishing_with_colon">Furnishing:</string>
    <string name="share_property_details">Share Property Details</string>
    <string name="load_more_properties">Load more properties</string>
</resources>