<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_messageshortlist"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_properties"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_must_be_logged_in_to_save_properties"
            android:textColor="@color/light_gray9"
            android:textSize="14sp"
            android:layout_marginTop="16dp"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/log_in"
            android:background="@drawable/round_corner_blue"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>