<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/propertyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp">

    </TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propertyDetails"
        android:layout_margin="12dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/landTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/land_title"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/landTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/propertyTitleTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/property_title_type"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/propertyTitleTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tenureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/tenure"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tenureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/furnishingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/furnishing"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/furnishingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:textColor="@color/light_gray7"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

<!--    <include layout="@layout/content_scrolling"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>