<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:background="@color/white">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivBackArrow"
                        android:layout_width="24dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_back_24"
                        android:scaleType="fitCenter"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="4dp"/>

                    <ImageView
                        android:id="@+id/toolbarShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_share_right_24"
                        android:scaleType="fitCenter"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/toolbarSave"
                        android:layout_marginEnd="16dp"/>

                    <ImageView
                        android:id="@+id/toolbarSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_24"
                        android:scaleType="fitCenter"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="16dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/propertyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:id="@+id/llItemBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/museosans_700"/>

                <TextView
                    android:id="@+id/propertyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/museosans_700"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/light_gray7"
                    android:fontFamily="@font/museosans_300"/>

                <TextView
                    android:id="@+id/propertyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/light_gray7"
                    android:fontFamily="@font/museosans_300"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/builtUpSizeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/built_up_size"
                        android:textSize="16sp"
                        android:textColor="@color/light_gray7"
                        android:fontFamily="@font/museosans_300"/>
                    <TextView
                        android:id="@+id/builtUpSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/light_gray7"
                        android:fontFamily="@font/museosans_300"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/furnishingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/furnishing_with_colon"
                        android:textSize="16sp"
                        android:textColor="@color/light_gray7"
                        android:fontFamily="@font/museosans_300"/>

                    <TextView
                        android:id="@+id/furnishing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/light_gray7"
                        android:fontFamily="@font/museosans_300"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/llAttributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ivBedRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bed_24"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/bedRooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/museosans_300"
                    android:layout_toEndOf="@+id/ivBedRoom"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:id="@+id/ivBathRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bathroom_24"
                    android:scaleType="fitCenter"
                    android:layout_toEndOf="@+id/bedRooms"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/bathRooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivBathRoom"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/museosans_300"
                    android:layout_marginTop="4dp"/>

                <ImageView
                    android:id="@+id/ivCarParking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_car_24"
                    android:scaleType="fitCenter"
                    android:layout_toEndOf="@+id/bathRooms"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/carParking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivCarParking"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/museosans_300"
                    android:layout_marginTop="4dp"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/publishedOnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published_on"/>

                <TextView
                    android:id="@+id/publishedOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <include android:id="@+id/propertyDetails"
                layout="@layout/view_propertydetails"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:weightSum="1.0"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/contact"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/contact"
            android:background="@drawable/round_corner_blue"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/whatsApp"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/whatsapp"
            android:background="@drawable/round_corner_gray"
            android:textColor="@color/black"
            android:layout_weight="0.5"
            android:layout_margin="4dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
